# skm

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md
.gid/: graph.yml
crates/ase/: Cargo.toml
crates/ase-cli/: Cargo.toml
crates/ase-cli/src/: lib.rs  main.rs
crates/ase-cli/src/commands/: bench.rs  export.rs  index.rs  init.rs  list.rs  mod.rs  optimize.rs  select.rs  serve.rs  stats.rs  test.rs  validate.rs
crates/ase-core/: Cargo.toml
crates/ase-core/src/: error.rs  lib.rs
crates/ase-disclose/: Cargo.toml
crates/ase-disclose/src/: context.rs  error.rs  levels.rs  lib.rs
crates/ase-embed/: Cargo.toml
crates/ase-embed/src/: bge.rs  error.rs  index.rs  lib.rs  minilm.rs  multicomp.rs  provider.rs
crates/ase-enforce/: Cargo.toml
crates/ase-enforce/src/: error.rs  hooks.rs  lib.rs  pipeline.rs  policy.rs  validator.rs
crates/ase-learn/: Cargo.toml
crates/ase-learn/src/: analytics.rs  error.rs  harness.rs  lib.rs  metrics.rs  optimizer.rs
crates/ase-select/: Cargo.toml
crates/ase-select/src/: cascade.rs  error.rs  fewshot.rs  lib.rs  llm.rs  semantic.rs  strategy.rs  trigger.rs
crates/ase/src/: lib.rs
crates/skm/: Cargo.toml
crates/skm-cli/: Cargo.toml
crates/skm-cli/src/: lib.rs  main.rs
crates/skm-cli/src/commands/: bench.rs  export.rs  index.rs  init.rs  list.rs  optimize.rs  select.rs  serve.rs  stats.rs  test.rs  validate.rs
crates/skm-core/: Cargo.toml
crates/skm-core/src/: error.rs  lib.rs  parser.rs  registry.rs  schema.rs  watcher.rs
crates/skm-disclose/: Cargo.toml
crates/skm-disclose/src/: context.rs  error.rs  levels.rs  lib.rs  tokens.rs
crates/skm-embed/: Cargo.toml
crates/skm-embed/src/: api.rs  error.rs  index.rs  lib.rs  multicomp.rs
crates/skm-enforce/: Cargo.toml
crates/skm-enforce/src/: error.rs  hooks.rs  lib.rs  pipeline.rs  policy.rs  validator.rs
crates/skm-learn/: Cargo.toml
crates/skm-learn/src/: analytics.rs  error.rs  harness.rs  lib.rs  metrics.rs  optimizer.rs
crates/skm-node/: Cargo.toml  index.d.ts  package.json
crates/skm-node/__test__/: index.spec.ts
crates/skm-node/src/: lib.rs
crates/skm-python/: Cargo.toml  README.md  pyproject.toml
crates/skm-python/python/skm/: __init__.py  __init__.pyi
crates/skm-python/src/: lib.rs
crates/skm-python/tests/: test_basic.py
crates/skm-python/tests/fixtures/test-skill/: SKILL.md
crates/skm-select/: Cargo.toml
crates/skm-select/src/: cascade.rs  error.rs  fewshot.rs  lib.rs  llm.rs  semantic.rs  strategy.rs  trigger.rs
crates/skm/src/: lib.rs
crates/skx/: Cargo.toml
crates/skx-cli/: Cargo.toml
crates/skx-cli/src/: lib.rs  main.rs
crates/skx-cli/src/commands/: bench.rs  export.rs  index.rs  init.rs  list.rs  optimize.rs  select.rs  serve.rs  stats.rs  test.rs  validate.rs
crates/skx-core/: Cargo.toml
crates/skx-core/src/: error.rs  lib.rs
crates/skx-disclose/: Cargo.toml
crates/skx-disclose/src/: context.rs  error.rs  levels.rs  lib.rs
crates/skx-embed/: Cargo.toml
crates/skx-embed/src/: embedding.rs  error.rs  index.rs  lib.rs  multicomp.rs  simd.rs
crates/skx-enforce/: Cargo.toml
crates/skx-enforce/src/: error.rs  hooks.rs  lib.rs  pipeline.rs  policy.rs  validator.rs
crates/skx-learn/: Cargo.toml
crates/skx-learn/src/: analytics.rs  error.rs  harness.rs  lib.rs  metrics.rs  optimizer.rs
crates/skx-select/: Cargo.toml
crates/skx-select/src/: cascade.rs  error.rs  fewshot.rs  lib.rs  llm.rs  semantic.rs  strategy.rs  trigger.rs
crates/skx/src/: lib.rs
docs/: POSITIONING.md  TESTING.md
examples/mini-agent/: Cargo.toml  README.md
examples/mini-agent/skills/api-testing/: SKILL.md
examples/mini-agent/skills/code-review/: SKILL.md
examples/mini-agent/skills/database-query/: SKILL.md
examples/mini-agent/skills/deployment/: SKILL.md
examples/mini-agent/skills/email-compose/: SKILL.md
examples/mini-agent/skills/file-search/: SKILL.md
examples/mini-agent/skills/git-operations/: SKILL.md
examples/mini-agent/skills/image-gen/: SKILL.md
examples/mini-agent/skills/summarize/: SKILL.md
examples/mini-agent/skills/translate/: SKILL.md
examples/mini-agent/skills/weather/: SKILL.md
examples/mini-agent/skills/web-scraping/: SKILL.md
examples/mini-agent/src/: main.rs
