[package]
name = "ase-learn"
description = "Evaluation, metrics, and optimization for Agent Skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["analytics-sqlite"]
analytics-sqlite = ["dep:rusqlite"]
analytics-memory = []

[dependencies]
ase-core = { workspace = true }
ase-select = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hdrhistogram = { workspace = true }

# Optional: SQLite analytics
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
