[package]
name = "skm"
description = "Agent Skill Engine - Selection, enforcement, and optimization for SKILL.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["embed-bge-m3"]
embed-bge-m3 = ["skm-embed/embed-bge-m3"]
embed-minilm = ["skm-embed/embed-minilm"]
embed-openai = ["skm-embed/embed-openai"]
embed-cohere = ["skm-embed/embed-cohere"]
embed-compat = ["skm-embed/embed-compat"]
no-embed = ["skm-embed/no-embed"]
analytics-sqlite = ["skm-learn/analytics-sqlite"]
analytics-memory = ["skm-learn/analytics-memory"]
http-server = ["skm-cli/http-server"]

[dependencies]
skm-core = { workspace = true }
skm-embed = { workspace = true }
skm-select = { workspace = true }
skm-disclose = { workspace = true }
skm-enforce = { workspace = true }
skm-learn = { workspace = true }
skm-cli = { workspace = true }
