[package]
name = "skx-cli"
description = "Developer CLI for Agent Skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "skx"
path = "src/main.rs"

[features]
default = []
http-server = ["dep:axum"]

[dependencies]
skx-core = { workspace = true }
skx-embed = { workspace = true }
skx-select = { workspace = true }
skx-disclose = { workspace = true }
skx-enforce = { workspace = true }
skx-learn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = "1.0"

# Optional: HTTP server
axum = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
